[gd_scene load_steps=13 format=2]

[ext_resource path="res://World.gd" type="Script" id=1]
[ext_resource path="res://Imagens/tabuleiro.jpg" type="Texture" id=2]
[ext_resource path="res://Button.gd" type="Script" id=3]
[ext_resource path="res://Button2.gd" type="Script" id=4]
[ext_resource path="res://Button3.gd" type="Script" id=5]
[ext_resource path="res://Button4.gd" type="Script" id=6]
[ext_resource path="res://Button5.gd" type="Script" id=7]
[ext_resource path="res://Button6.gd" type="Script" id=8]
[ext_resource path="res://Button7.gd" type="Script" id=9]
[ext_resource path="res://Button8.gd" type="Script" id=10]
[ext_resource path="res://Button9.gd" type="Script" id=11]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 289.5, 289.5 )

[node name="World" type="Node2D"]
script = ExtResource( 1 )

[node name="tabuleiro" type="Sprite" parent="."]
visible = false
position = Vector2( 512, 289.5 )
scale = Vector2( 2.292, 2.292 )
texture = ExtResource( 2 )

[node name="tabuleiro_area" type="Area2D" parent="tabuleiro"]
position = Vector2( -223.386, -126.309 )
scale = Vector2( 0.4363, 0.4363 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="tabuleiro/tabuleiro_area"]
position = Vector2( 512, 288 )
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Button" type="Button" parent="tabuleiro/tabuleiro_area"]
margin_left = 224.0
margin_right = 416.0
margin_bottom = 192.0
rect_min_size = Vector2( 96.5, 96.5 )
flat = true
script = ExtResource( 3 )

[node name="Button2" type="Button" parent="tabuleiro/tabuleiro_area"]
margin_left = 416.0
margin_right = 608.0
margin_bottom = 192.0
rect_min_size = Vector2( 96.5, 96.5 )
flat = true
script = ExtResource( 4 )

[node name="Button3" type="Button" parent="tabuleiro/tabuleiro_area"]
margin_left = 608.0
margin_right = 800.0
margin_bottom = 192.0
rect_min_size = Vector2( 96.5, 96.5 )
flat = true
script = ExtResource( 5 )

[node name="Button4" type="Button" parent="tabuleiro/tabuleiro_area"]
margin_left = 224.0
margin_top = 192.0
margin_right = 416.0
margin_bottom = 384.0
rect_min_size = Vector2( 96.5, 96.5 )
flat = true
script = ExtResource( 6 )

[node name="Button5" type="Button" parent="tabuleiro/tabuleiro_area"]
margin_left = 416.0
margin_top = 192.0
margin_right = 608.0
margin_bottom = 384.0
rect_min_size = Vector2( 96.5, 96.5 )
flat = true
script = ExtResource( 7 )

[node name="Button6" type="Button" parent="tabuleiro/tabuleiro_area"]
margin_left = 608.0
margin_top = 192.0
margin_right = 800.0
margin_bottom = 384.0
rect_min_size = Vector2( 96.5, 96.5 )
flat = true
script = ExtResource( 8 )

[node name="Button7" type="Button" parent="tabuleiro/tabuleiro_area"]
margin_left = 224.0
margin_top = 384.0
margin_right = 416.0
margin_bottom = 576.0
rect_min_size = Vector2( 96.5, 96.5 )
flat = true
script = ExtResource( 9 )

[node name="Button8" type="Button" parent="tabuleiro/tabuleiro_area"]
margin_left = 416.0
margin_top = 384.0
margin_right = 608.0
margin_bottom = 576.0
rect_min_size = Vector2( 96.5, 96.5 )
flat = true
script = ExtResource( 10 )

[node name="Button9" type="Button" parent="tabuleiro/tabuleiro_area"]
margin_left = 608.0
margin_top = 384.0
margin_right = 800.0
margin_bottom = 576.0
rect_min_size = Vector2( 96.5, 96.5 )
flat = true
script = ExtResource( 11 )

[node name="Control" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="X" type="Label" parent="Control"]
margin_left = 896.0
margin_right = 955.0
margin_bottom = 14.0
text = "O points:"

[node name="O" type="Label" parent="Control"]
margin_left = 64.0
margin_right = 124.0
margin_bottom = 14.0
text = "X points: "

[node name="Control2" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="choose_x" type="Button" parent="Control2"]
margin_left = 352.0
margin_top = 224.0
margin_right = 364.0
margin_bottom = 244.0
text = "X"
__meta__ = {
"_edit_group_": true
}

[node name="choose_o" type="Button" parent="Control2"]
margin_left = 576.0
margin_top = 224.0
margin_right = 588.0
margin_bottom = 244.0
text = "O"
__meta__ = {
"_edit_group_": true
}

[node name="choose_side" type="Label" parent="Control2"]
margin_left = 424.0
margin_top = 160.0
margin_right = 538.0
margin_bottom = 174.0
text = "Choose your side!"
[connection signal="pressed" from="tabuleiro/tabuleiro_area/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="tabuleiro/tabuleiro_area/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="tabuleiro/tabuleiro_area/Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="tabuleiro/tabuleiro_area/Button4" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="tabuleiro/tabuleiro_area/Button5" to="." method="_on_Button5_pressed"]
[connection signal="pressed" from="tabuleiro/tabuleiro_area/Button6" to="." method="_on_Button6_pressed"]
[connection signal="pressed" from="tabuleiro/tabuleiro_area/Button7" to="." method="_on_Button7_pressed"]
[connection signal="pressed" from="tabuleiro/tabuleiro_area/Button8" to="." method="_on_Button8_pressed"]
[connection signal="pressed" from="tabuleiro/tabuleiro_area/Button9" to="." method="_on_Button9_pressed"]
[connection signal="pressed" from="Control2/choose_x" to="." method="_on_choose_x_pressed"]
[connection signal="pressed" from="Control2/choose_o" to="." method="_on_choose_o_pressed"]
